# unit4

./: .gitignore  .pre-commit-config.yaml  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: check_reqs.yaml  ci.yaml  pypi.yaml
src/: __init__.py  unit4.py
src/tests/: __init__.py  test_unit4.py
unit4/: __init__.py  core.py  unit4.py
unit4/tests/: __init__.py  test_unit4.py
