[metadata]
name = sampleproject
version = 0.0.1
author = Zypp
author_email = hello@zypp.io
description = Insert short description for package
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, sampleproject
url = https://github.com/zypp-io/sampleproject
project_urls =
    Bug Tracker = https://github.com/zypp-io/sampleproject/issues
    Source = https://github.com/zypp-io/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = sampleproject
python_requires = >=3.7
install_requires =
    pandas==1.3.2

[options.packages.find]
where = sampleproject

[flake8]
statistics = True
count = True
max-complexity=10
max-line-length=120
per-file-ignores=__init__.py: F401
