[metadata]
name = unit4
version = 0.0.1
author = Melvin Folkers (Zyp)
author_email = melvin@zypp.io, hello@zypp.io
description = Package for pulling datasets using the Unit4 Multivers API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, sampleproject
url = https://github.com/zypp-io/sampleproject
project_urls =
    Bug Tracker = https://github.com/zypp-io/unit4/issues
    Source = https://github.com/zypp-io/unit4
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = unit4
python_requires = >=3.7
;install_requires =
;    pandas==1.3.2

[options.packages.find]
where = unit4

[flake8]
statistics = True
count = True
max-complexity=10
max-line-length=120
per-file-ignores=__init__.py: F401
